objects/HPMenu__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Menu__c</fullName>
        <label>Menu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <label>Short Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SiteURL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SubMenuName__c</fullName>
        <label>Sub Menu Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Menu Of</label>
        <referenceTo>HPMenu__c</referenceTo>
        <relationshipLabel>HPMenu</relationshipLabel>
        <relationshipName>HPMenu</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HP Menu</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>HPMenu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HPMenu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>